# DC

./: CMakeLists.txt  README.md  index.html  params.json
cmake/: FindGDAL.cmake.bak  thirdparty.cmake  thirdparty.cmake.bak
module/: CMakeLists.txt  CMakeLists.txt.bak
module/src/: CCBaseTypeDefine.h  CCBaseTypeDefine.h.bak  CCImage.cpp  CCImage.h  CCLog.h  CCLogin.cpp  CCLogin.h  CCLogin.qml  CCLogin.qml.bak  CMakeLists.txt  GFimg.cpp  GFimg.h  Home.cpp  Home.h  Home.qml  HomePage.cpp  HomePage.h  HomePage.qml  QmlPlugin.cpp  QmlPlugin.h  SelectItem.qml  base64.cpp  base64.h  cal_gf.cpp  cancel_flag.cpp  cancel_flag.h  continue_flag.h.bak  hello.h  imgcontrol.cpp  imgcontrol.h  imgpreview.cpp  imgpreview.h  ischedule.cpp  ischedule.h  main.cpp  pictures.qrc.bak  qml.qrc  qml.qrc.bak
module/src/gfmodule/bak/: Aset.cpp  Aset.h  CMakeLists.txt  GFimg.cpp  GFimg.h  config.h  file_chooser.cpp  image.cpp  main.cpp  myassert.h  parsexml.cpp  testextract.cpp
module/src/res/: CMakeLists.txt  pictures.qrc.bak  qml.qrc.bak
